Fix overflow hiding some parts of the title fonts.

--- a/src/OrchardCore.Themes/TheAdmin/Assets/scss/modules/admin/_navbar.scss
+++ b/src/OrchardCore.Themes/TheAdmin/Assets/scss/modules/admin/_navbar.scss
@@ -20,6 +20,7 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            height: 32px;
         }
     }
 
