--- a/src/OrchardCore.Themes/TheAdmin/wwwroot/Styles/TheAdmin.css
+++ b/src/OrchardCore.Themes/TheAdmin/wwwroot/Styles/TheAdmin.css
@@ -15666,7 +15666,8 @@
         max-width: 180px;
         white-space: nowrap;
         overflow: hidden;
-        text-overflow: ellipsis; } }
+        text-overflow: ellipsis;
+        height: 32px; } }
     :root[data-theme='default'] .ta-navbar-top .nav-link {
       font-size: 14px; }
     [dir]:root[data-theme='default'] .ta-navbar-top .breadcrumb {
@@ -32346,7 +32347,8 @@
         max-width: 180px;
         white-space: nowrap;
         overflow: hidden;
-        text-overflow: ellipsis; } }
+        text-overflow: ellipsis;
+        height: 32px; } }
     :root[data-theme='darkmode'] .ta-navbar-top .nav-link {
       font-size: 14px; }
     [dir]:root[data-theme='darkmode'] .ta-navbar-top .breadcrumb {
